# vicharak-updates-checker

./: Cargo.toml
src/: main.rs  update.rs
